...
                    minimumHorizontalFlingVelocity = minimumHorizontalFlingVelocity,
                    maximumFlingVelocity = maximumFlingVelocity,
                    gestureEnabled = returnAnimation?.feedback == null,
                    modifier = Modifier
                        .width(cardWidth)
                        .height(cardWidth / DrawingCanvasSpec.aspectRatio)
                        .testTag("study-card"),
                )
            }
        }
    }
}

...
